...

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_delete_account"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="First Name" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="Last Name" />

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="Date of Birth" />

            <TextView
                android:id="@+id/tv_address1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
...
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="Address2" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="City" />

            <TextView
                android:id="@+id/tv_postal_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="Postal Code" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
...
